package com.traveltrove.betraveltrove.dataaccess.tourpackage;

public enum PackageStatus {
    OPEN,
    CLOSED,
    FULL,
    NEAR_CAPACITY,
    EXPIRED
}
